web_app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-service
spec:
  selector:
    app: timestamp-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  #type: NodePort
