web_app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timestamp-ingress
spec:
  rules:
  - host: sam-learn.com # Replace with your actual hostname or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timestamp-service
            port:
              number: 80
